--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -1,4 +1,12 @@
 body{
     background-color: #f1f1f1;
 }
-
+#bookmark{
+    display: none;
+}
+#send{
+    display: none;
+}
+#saito{
+    margin-left: 1%;
+}
