--- a/投稿画面ver1.1/css/TimeLine-44.css
+++ b/投稿画面ver1.1/css/TimeLine-44.css
@@ -5,7 +5,7 @@
 
 .ContentsListIllustThumb {
     width: 640px;
-    padding-left:200px;
+    padding:15px 0
 }
 
 .IllustTimeLine {
@@ -33,7 +33,7 @@
 
 .TimeLineUser {
     display: block;
-
+    float: left;
     width: 600px;
     padding: 20px 20px 10px;
     min-height: 50px;
@@ -351,7 +351,7 @@ timelineillustbtn.Twitter {
 
 .CommentList {
     width: 600px;
-
+    float: left;
     margin: 0;
     padding-top:0
 }
@@ -1097,7 +1097,12 @@ timelineillustbtn.Twitter {
     width:75px
 }
 
-
+.LoadingInfo {
+    display: block;
+    float: left;
+    width: 100%;
+    text-align:center
+}
 
 .PageBar {
     display:none
