ホーム画面編集

--- a/toukou/style.css
+++ b/toukou/style.css
@@ -8,6 +8,7 @@
     position: absolute;
     padding: 20px 15%;
     top: 10%;
+    background-color: #f1f1f1;
   }
   form header {
     margin: 0 0 20px 0; 
