--- a/src/CSS/profile.css
+++ b/src/CSS/profile.css
@@ -95,7 +95,7 @@ body, html { margin: 0; padding: 0; font-family: 'Roboto', sans-serif;
   width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  grid-template-rows: repeat(3, 400px);
+  grid-template-rows: repeat(auto-fit, auto-fit);
   grid-gap: 3em;
   justify-content: center;
   align-content: center;
@@ -104,8 +104,8 @@ body, html { margin: 0; padding: 0; font-family: 'Roboto', sans-serif;
   margin: 3em 0;
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-template-rows: repeat(3, 300px);
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-rows: repeat(auto-fit, auto-fit);
   grid-gap: 1.5em;
   justify-content: center;
   align-content: center;
